# intro-python3

./: README.md  pyproject.toml
data/: ads.csv  cars.json
notebooks/: 03-ReplConsole.ipynb  04-Check-for-None-in-Python.ipynb  05-Understand-Mutable-Immutable-objects-in-Python.ipynb  06-Execute-a-Python-Script.ipynb  07-Perform-Math-Operations-in-Python.ipynb  08-Format-Strings-in-Python.ipynb  09-Manipulate-and-Search-Strings-with-Python-Methods.ipynb  10-Add-Flow-Control-to-your-Python-application.ipynb  11-Use-Comparison-Operators-in-Python.ipynb  12-Use-Lists-in-Python.ipynb  13-Slice-Lists-in-Python.ipynb  14-Understand-List-Comprehensions-in-Python.ipynb  15-Manipulate-Data-with-Dictionaries-in-Python.ipynb  16-Create-Immutable-Values-in-Python-with-Tuples.ipynb  17-Create-Unique-Unordered-Collections-in-Python-with-Set.ipynb  18-Invoke-the-Built-in-Help-System-with-Python-dir-and-help-Methods.ipynb  19-Create-a-Log-for-your-Python-application.ipynb  20-Read-Input-in-Python-from-the-Console.ipynb  21-Create-Reusable-Components-with-Functions-in-Python.ipynb  22-Reuse-Code-in-Multiple-Projects-with-Python-Modules.ipynb  23-Read-and-Parse-Files-in-Python.ipynb  24-Write-to-a-File-in-Python.ipynb  25-Handle-Exceptions-to-prevent-crashes-in-Python.ipynb  26-Understand-Scope-in-Python.ipynb  27-Use-Python-Classes.ipynb
tests/: __init__.py  comments.py  executable_script.py  simple_module.py  try_import.py  type_annotations.py  type_dict_and_dataframe.py
