[project]
name = "introToPython"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "alessandro stoppato", email = "alexrah@gmail.com"},
]
dependencies = [
    "jupyter>=1.0.0",
    "annotated-types>=0.7.0",
    "pydantic>=2.8.2",
    "devtools>=0.12.2",
    "rich>=13.7.1",
    "polars>=1.1.0",
    "pandas>=2.2.2",
    "mypy>=1.11.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
